# zenlang

./: .gitignore  .justfile  CHANGELIST.md  COOKBOOK.md  Cargo.toml  Changelog.md  PLAN.md  README.md  TODO.md  package.json  scratch.md  test.zen  test_diag.py  tree-sitter-zenlang.wasm  zenlang-lsp-stderr.txt
.cargo/: config.toml
.github/workflows/: deploy-book.yml
benches/: iter_overhead.zen
book/: book.toml
book/book/: 404.html  advanced.html  attributes.html  bindings.html  bytecode.html  cargo-features.html  cli.html  collections.html  common-patterns.html  compiler-pipeline.html  control-flow.html  dap.html  disassembler.html  embedding.html  enums.html  first-script.html  foreign-types.html  formatter.html  functions.html  generators.html  generics.html  getting-started.html  hot-reload.html  impl.html  index.html  installation.html  introduction.html  language-guide.html  lsp.html  match.html  memory.html  modules.html  native-functions.html  opaque-types.html  operators.html  primitives.html  print.html  rust-interop.html  searcher-09f2665d.js  searchindex-3e7c156f.js  (+24 more)
book/src/: SUMMARY.md  advanced.md  attributes.md  bindings.md  bytecode.md  cargo-features.md  cli.md  collections.md  common-patterns.md  compiler-pipeline.md  control-flow.md  dap.md  disassembler.md  embedding.md  enums.md  first-script.md  foreign-types.md  formatter.md  functions.md  generators.md  generics.md  getting-started.md  hot-reload.md  impl.md  installation.md  introduction.md  language-guide.md  lsp.md  match.md  memory.md  modules.md  native-functions.md  opaque-types.md  operators.md  primitives.md  rust-interop.md  stdlib-base64.md  stdlib-color.md  stdlib-core.md  stdlib-datetime.md  (+25 more)
examples/: basic_embedding.rs  cross_call.rs  custom_natives.rs  foreign_types.rs  hot_reload.rs  method_calls.zen  tour.zen
examples/bevy_integration/: Cargo.toml
examples/fyrox_integration/: Cargo.toml
examples/macroquad_edict_integration/: Cargo.toml
grammars/zenlang/: package-lock.json
macros/: Cargo.toml
macros/src/: lib.rs
my-game/: zenc.json
my-game/src/: main.zen
patches/arena-b/: CHANGELOG.md  README.md
src/: ast.rs  compiler.rs  dap.rs  error.rs  formatter.rs  grammar.json  hotreload.rs  interop.rs  ir.rs  lexer.rs  lib.rs  lsp.rs  main.rs  mod_resolver.rs  parser.rs  parser_test.rs  prelude.rs  prelude.zen  resolver.rs  slab.rs  span.rs  symbol.rs  token.rs  typeck.rs  value.rs  vm.rs
src/stdlib/: base64.rs  color.rs  datetime.rs  deque.rs  fs.rs  (+11 more)
tests/: base64_test.zen  bitwise.zen  closures.zen  collection_literals.zen  color_test.zen  compound_assignment.zen  control_flow.zen  data_types.zen  datetime_test.zen  deque_test.zen  enum_variants.zen  enums.zen  fs.zen  functions.zen  gen2.zen  gen_test.zen  hash_test.zen  if_let.zen  iterator_chaining.zen  iterators.zen  log.zen  maps.zen  methods.zen  modules.zen  noise_test.zen  numeric_separators.zen  option_result.zen  partial_app.zen  pipe.zen  prelude_iterators.zen  repro_assert.zen  repro_closure.zen  repro_closure3.zen  repro_closure5.zen  repro_closure_multi.zen  repro_mut_for.zen  repro_mut_for2.zen  repro_stress.zen  set_test.zen  shorthand_test.zen  (+8 more)
zed-extension/: .gitignore  Cargo.toml  LICENSE  README.md  SKILL.md  extension.toml  extension.wasm
zed-extension/grammars/zenlang/patches/arena-b/: .gitignore  Cargo.toml  debug_test.rs
zed-extension/grammars/zenlang/patches/arena-b/docs/: advanced.md  architecture.md  strategies.md
zed-extension/grammars/zenlang/patches/arena-b/examples/: v0_5_features.rs  virtual_memory_demo.rs
zed-extension/grammars/zenlang/patches/arena-b/src/: core.rs  error.rs  legacy_arena.rs
zed-extension/grammars/zenlang/patches/arena-b/tests/: arena_basic.rs  arena_builder_tests.rs  chunk_usage.rs  fast_reset_api.rs  pool_basic.rs  thread_local.rs  v0_5_integration.rs
(+107 files in other folders)
