[workspace]
members = [".", "macros"]

[package]
name = "zenlang"
version = "0.1.0"
edition = "2024"
description = "An embedded Rust-like scripting language for game engines"

[dependencies]
arena-b = "1.0.0"
zenlang-macros = { path = "macros" }
snafu = "0.8"
derive_more = { version = "2", features = ["add", "display", "from"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
once_cell = "1"
compact_str = "0.8"
smallvec = { version = "1", features = ["union", "const_generics"] }
bytes = "1"
itertools = "0.13"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
camino = "1"
clap = { version = "4", features = ["derive"] }
nanoid = "0.4"
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1"
url = "2"
ctrlc = "3"

[[bin]]
name = "zenc"
path = "src/main.rs"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[patch.crates-io]
arena-b = { path = "patches/arena-b" }
