[workspace]
members = [".", "macros"]
exclude = ["zed-extension"]

[package]
name = "zenlang"
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/SonicZentropy/zenlang"
rust-version = "1.85"
description = "An embedded Rust-like scripting language for game engines"

[[bin]]
name = "zenc"
path = "src/main.rs"

[dependencies]
arena-b = "1.0.0"
bytes = "1"
camino = "1"
clap = { version = "4", features = ["derive"] }
compact_str = "0.9.1"
ctrlc = "3"
derive_more = { version = "2", features = ["add", "display", "from"] }
itertools = "0.15"
lsp-server = "0.8"
lsp-types = "0.97"
nanoid = "0.5"
once_cell = "1"
serde_json = "1"
smallvec = { version = "1", features = ["union", "const_generics"] }
snafu = "0.9.1"
strum = { version = "0.28", features = ["derive"] }
strum_macros = "0.28"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
zenlang-macros = { path = "macros", version = "0.4.0" }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
