[package]
name = "zenlang-macros"
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/SonicZentropy/zenlang"
description = "Procedural macros for zenlang foreign type binding"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
