[package]
name = "arena-b"
version = "1.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Production-grade bump allocator with lock-free, slab, and virtual-memory tooling for parsers, game engines, and request-scoped services"
readme = "README.md"
repository = "https://github.com/M1tsumi/arena-b"
homepage = "https://quefep.uk"
documentation = "https://docs.rs/arena-b"
keywords = ["allocator", "bump", "lock-free", "virtual-memory", "thread-local", "slab", "arena", "performance"]
categories = ["memory-management", "data-structures"]

[lib]
name = "arena_b"
path = "src/lib.rs"

[dependencies]
cfg-if = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Memory"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[features]
default = ["stats", "arena_module"]
stats = []
virtual_memory = []
thread_local = []
lockfree = []
debug = []
slab = []
arena_module = []
single_thread_fast = []

[[bench]]
name = "arena_vs_box"
harness = false

[[bench]]
name = "optimization_benchmarks"
harness = false

[[bench]]
name = "advanced_benchmarks"
harness = false

[[bench]]
name = "v0_4_0_benchmarks"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
